tdf#112346: take Word no-wrap limit into account also for ww8

This also makes ww8 floating-table conversion decision heuristics
somewhat closer to OOXML code.

Change-Id: I29ca2ebabd1758ad98e02aaf560cf2f44daec3a8
Reviewed-on: https://gerrit.libreoffice.org/42196
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>