sw/source/filter/ww8/ww8par6.cxx
@@ -5099,21 +5099,8 @@ bool SwWW8ImplReader::ParseTabPos(WW8_TablePos *pTabPos, WW8PLCFx_Cp_FKP* pPap)
         aRes = pPap->HasSprm(0x941F);
         if (aRes.pSprm && aRes.nRemainingData >= 2)
             pTabPos->nLoMgn = SVBT16ToShort(aRes.pSprm);
+        pTabPos->bNoFly = !FloatingTableConversion(pPap);
         bRet = true;
-    }
-    aRes = pPap->HasSprm(NS_sprm::sprmTDefTable);
-    if (nullptr != aRes.pSprm)
-    {
-        WW8TabBandDesc aDesc;
-        aDesc.ReadDef(false, aRes.pSprm);
-        int nTableWidth = aDesc.nCenter[aDesc.nWwCols] - aDesc.nCenter[0];
-        int nTextAreaWidth = m_aSectionManager.GetTextAreaWidth();
-        // If the table is wider than the text area, then don't create a fly
-        // for the table: no wrapping will be performed anyway, but multi-page
-        // tables will be broken.
-        // If there are columns, do create a fly, as the flow of the columns
-        // would otherwise restrict the table.
-        pTabPos->bNoFly = nTableWidth >= nTextAreaWidth  && m_aSectionManager.CurrentSectionColCount() < 2;
     }
     return bRet;
 }
